--- a/css/reset.css
+++ b/css/reset.css
@@ -28,6 +28,11 @@ body {
   font-size: 1.6rem;
 }
 
+h2 {
+  font-size: 3.2rem;
+  color: var(--very-dark-blue);
+}
+
 /* container */
 .container {
   max-width: 1440px;
