--- a/css/hero.css
+++ b/css/hero.css
@@ -23,8 +23,7 @@
 .heroBtn {
   padding: 1.4rem 2rem;
   border-radius: 4px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .heroBtn.chrome {
