--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import "reset.css";
-@import "general-styles.css";
+@import "colors.css";
 @import "header.css";
 @import "hero.css";
 @import "features.css";
