--- a/css/faq.css
+++ b/css/faq.css
@@ -1,7 +1,6 @@
 /* faq section */
-
 .faq {
-  padding: 4rem 0rem;
+  margin: 4rem 0rem;
 }
 
 .faq-text {
@@ -33,18 +32,13 @@
 
 .faq-list dt {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   width: 50rem;
   font-size: 1.6rem;
   color: var(--very-dark-blue);
   padding: 2rem 0rem;
   cursor: pointer;
-  border-top: 1px solid var(--grayish-blue);
-}
-
-.faq-list dl {
-  border-bottom: 1px solid var(--grayish-blue);
 }
 
 .faq-list dd {
@@ -57,6 +51,17 @@
 
 .faq-list dd.active {
   display: block;
+  animation: accordion 0.5s forwards;
+}
+
+.faq-list dt::after {
+  content: "►";
+  color: var(--soft-blue);
+  display: block;
+}
+
+.faq-list dt.active::after {
+  content: "▼";
 }
 
 .faq a {
@@ -65,4 +70,16 @@
   border-radius: 4px;
   color: white;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+
+@keyframes accordion {
+  from {
+    opacity: 0;
+    max-height: 0;
+  }
+
+  to {
+    opacity: 1;
+    max-height: 20rem;
+  }
 }
