--- a/css/modal.css
+++ b/css/modal.css
@@ -15,6 +15,7 @@
 
 .modal-container.active {
   display: flex;
+  animation: showLeft 0.5s forwards;
 }
 
 .modal {
@@ -59,4 +60,15 @@
   top: -3rem;
   right: -2rem;
   cursor: pointer;
+}
+
+@keyframes showLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-30px, 0, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
 }
