--- a/css/colors.css
+++ b/css/colors.css
@@ -1,6 +1,6 @@
 :root {
-  --soft-blue: hsl(231, 69%, 60%);
-  --soft-red: hsl(0, 94%, 66%);
-  --grayish-blue: hsl(229, 8%, 60%);
-  --very-dark-blue: hsl(229, 31%, 21%);
+  --soft-blue: #5368df;
+  --soft-red: #fa5757;
+  --grayish-blue: #9194a1;
+  --very-dark-blue: #252b46;
 }
