--- a/css/extensions.css
+++ b/css/extensions.css
@@ -20,6 +20,7 @@
 .extension-cards {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   max-width: 105rem;
   margin: 0 auto;
 }
@@ -33,6 +34,7 @@
   height: 35rem;
   width: 30rem;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  margin-right: 2rem;
 }
 
 .extension-icon {
