--- a/css/faq.css
+++ b/css/faq.css
@@ -27,7 +27,7 @@
 }
 
 .faq-list dl {
-  margin: 4rem 0rem;
+  margin: 4rem 2rem;
 }
 
 .faq-list dt {
@@ -39,6 +39,8 @@
   color: var(--very-dark-blue);
   padding: 2rem 0rem;
   cursor: pointer;
+  font-size: 1.8rem;
+  font-weight: 500;
 }
 
 .faq-list dd {
@@ -52,12 +54,14 @@
 .faq-list dd.active {
   display: block;
   animation: accordion 0.5s forwards;
+  padding-bottom: 1rem;
 }
 
 .faq-list dt::after {
   content: "►";
   color: var(--soft-blue);
   display: block;
+  margin-left: 2rem;
 }
 
 .faq-list dt.active::after {
